--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           </h2>
         </div>
         <button 
-          class="button save-button"
+          class="button"
           type="button" 
           onclick="window['dialog'].close()">
           <span class="button__text">
